12-01-2025 ... 1.0.7.0 ... Less LMR ............................. (29.4 +/- 14.8) , (8 + 0.08), (SPRT, 842) ,(https://sscg13.pythonanywhere.com/test/1631/)
12-02-2025 ... 1.0.8.0 ... L1 = 128 ............................. (119.4 +/- 33.7), (8 + 0.08), (SPRT, 266) ,(https://sscg13.pythonanywhere.com/test/1640/)
12-03-2025 ... 1.0.9.0 ... Quiet History Malus .................. (42.8 +/- 18.3) , (8 + 0.08), (SPRT, 596) ,(https://sscg13.pythonanywhere.com/test/1649/)
12-03-2025 ... 1.1.0.0 ... SEE Capture Ordering ................. (49.7 +/- 19.3) , (8 + 0.08), (SPRT, 486) ,(https://sscg13.pythonanywhere.com/test/1653/)
12-04-2025 ... 1.1.1.0 ... L1 = 256 ............................. (59.7 +/- 21.0) , (8 + 0.08), (SPRT, 470) ,(https://sscg13.pythonanywhere.com/test/1663/)
12-05-2025 ... 1.1.1.1 ... Improving in RFP ..................... (8.8 +/- 6.6)   , (8 + 0.08), (SPRT, 3332),(https://sscg13.pythonanywhere.com/test/1664/)
12-05-2025 ... 1.1.1.2 ... NMP Margin ........................... (19.2 +/- 11.0) , (8 + 0.08), (SPRT, 1232),(https://sscg13.pythonanywhere.com/test/1665/)
12-06-2025 ... 1.1.1.3 ... Improving in NMP Margin .............. (4.4 +/- 3.5)   , (8 + 0.08), (SPRT,11660),(https://sscg13.pythonanywhere.com/test/1675/)
12-06-2025 ... 1.1.1.4 ... Less Aggressive LMR in PV Nodes ...... (5.4 +/- 4.4)   , (8 + 0.08), (SPRT, 7614),(https://sscg13.pythonanywhere.com/test/1679/)
12-07-2025 ... 1.1.1.5 ... Index Quiet History by Squares ....... (8.7 +/- 6.4)   , (8 + 0.08), (SPRT, 3610),(https://sscg13.pythonanywhere.com/test/1691/)
12-10-2025 ... 1.1.1.6 ... Network 1-4 .......................... (15.7 +/- 10.3) , (8 + 0.08), (SPRT, 1864),(https://sscg13.pythonanywhere.com/test/1717/)
01-31-2026 ... 1.1.2.0 ... Quiet History Pruning ................ (32.8 +/- 14.6) , (8 + 0.08), (SPRT, 680) ,(https://sscg13.pythonanywhere.com/test/1867/)