@@ -1,4 +1,4 @@
-EXE := Wilted-1-1-2-0
+EXE := Wilted-1-1-2-1
 EVALFILE ?= src/wilted-net-1-4.bin
 ARCH := native
 SOURCES := src/*.cpp
